// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariablesApi deleteVariable() 1: Delete variable: esv-volkerstestvariable2 - success 1`] = `
{
  "_id": "esv-volkerstestvariable2",
  "description": "Volker's Updated Test Secret Description",
  "expressionType": "",
  "lastChangeDate": "2022-12-20T18:27:22.007Z",
  "lastChangedBy": "c5f3cf35-4cc1-42f9-80b3-59e1ca842510",
  "loaded": false,
  "valueBase64": "Vm9sa2VyJ3MgVGVzdCBWYXJpYWJsZSBWYWx1ZQ==",
}
`;

exports[`VariablesApi deleteVariable() 2: Delete variable: esv-volkerstestvariable3 - error 1`] = `
{
  "code": 404,
  "message": "The variable does not exist",
}
`;

exports[`VariablesApi getVariable() 1: Get existing variable: esv-volkerstestvariable1 1`] = `
{
  "_id": "esv-volkerstestvariable1",
  "description": "Volker's Updated Test Variable Description",
  "expressionType": "",
  "lastChangeDate": "2022-04-10T20:55:39.746Z",
  "lastChangedBy": "c5f3cf35-4cc1-42f9-80b3-59e1ca842510",
  "loaded": true,
  "valueBase64": "Vm9sa2VyJ3MgVGVzdCBWYXJpYWJsZSBWYWx1ZQo=",
}
`;

exports[`VariablesApi getVariable() 2: Get non-existing variable: esv-does-not-exist 1`] = `
{
  "code": 404,
  "message": "The variable does not exist",
}
`;

exports[`VariablesApi getVariables() 1: Get all variables - success 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": -1,
  "result": [
    {
      "_id": "esv-volkerstestvariable2",
      "description": "Volker's Test Variable Description",
      "expressionType": "",
      "lastChangeDate": "2022-12-20T18:27:22.007Z",
      "lastChangedBy": "c5f3cf35-4cc1-42f9-80b3-59e1ca842510",
      "loaded": false,
      "valueBase64": "Vm9sa2VyJ3MgVGVzdCBWYXJpYWJsZSBWYWx1ZQ==",
    },
    {
      "_id": "esv-volkerstestvariable1",
      "description": "Volker's Updated Test Variable Description",
      "expressionType": "",
      "lastChangeDate": "2022-04-10T20:55:39.746Z",
      "lastChangedBy": "c5f3cf35-4cc1-42f9-80b3-59e1ca842510",
      "loaded": true,
      "valueBase64": "Vm9sa2VyJ3MgVGVzdCBWYXJpYWJsZSBWYWx1ZQo=",
    },
    {
      "_id": "esv-461016d8d2-configurationpropertiescredentials",
      "description": "Configuration parameter /configurationProperties/credentials in file idm/conf/provisioner.openicf-OUD.json",
      "expressionType": "",
      "lastChangeDate": "2021-12-09T16:48:18.482Z",
      "lastChangedBy": "forgerock-automation",
      "loaded": true,
      "valueBase64": "RnJkcC0yMDEw",
    },
    {
      "_id": "esv-twilio-account-sid",
      "description": "Twilio account SID. Get your own at: https://twilio.com",
      "expressionType": "",
      "lastChangeDate": "2022-08-12T21:26:32.688Z",
      "lastChangedBy": "c5f3cf35-4cc1-42f9-80b3-59e1ca842510",
      "loaded": true,
      "valueBase64": "QUM3NTA0MTVlMzE2M2EyZTU3YjdhZWVhN2VlZDgyZDk0NA==",
    },
    {
      "_id": "esv-ipv4-cidr-access-rules",
      "description": "IPv4 CIDR access rules: { "allow": [ "address/mask" ] }",
      "expressionType": "",
      "lastChangeDate": "2022-08-25T20:16:54.243Z",
      "lastChangedBy": "c5f3cf35-4cc1-42f9-80b3-59e1ca842510",
      "loaded": true,
      "valueBase64": "eyAiYWxsb3ciOiBbICIxNDUuMTE4LjAuMC8xNiIsICIxMzIuMzUuMC4wLzE2IiwgIjEwMS4yMjYuMC4wLzE2IiwgIjk5LjcyLjI4LjE4Mi8zMiIgXSB9",
    },
    {
      "_id": "esv-twilio-phone-number",
      "description": "Twilio phone number. Get your own at: https://twilio.com",
      "expressionType": "",
      "lastChangeDate": "2022-08-12T21:27:18.560Z",
      "lastChangedBy": "c5f3cf35-4cc1-42f9-80b3-59e1ca842510",
      "loaded": true,
      "valueBase64": "KzEzMTc2NDQzMTA3",
    },
  ],
  "resultCount": 6,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;

exports[`VariablesApi putVariable() 1: Create variable: esv-volkerstestvariable2 - success 1`] = `
{
  "_id": "esv-volkerstestvariable2",
  "description": "Volker's Test Variable Description",
  "expressionType": "",
  "lastChangeDate": "2022-12-20T18:27:22.007Z",
  "lastChangedBy": "c5f3cf35-4cc1-42f9-80b3-59e1ca842510",
  "loaded": false,
  "valueBase64": "Vm9sa2VyJ3MgVGVzdCBWYXJpYWJsZSBWYWx1ZQ==",
}
`;

exports[`VariablesApi setVariableDescription() 1: Set variable description: esv-volkerstestvariable2 - success 1`] = `""`;

exports[`VariablesApi setVariableDescription() 2: Set variable description: esv-volkerstestvariable3 - error 1`] = `
{
  "code": 404,
  "message": "The variable does not exist",
}
`;
